Fixes layout issue in discussion list

--- a/material.less
+++ b/material.less
@@ -1885,3 +1885,8 @@ content:"chat_bubble_outline";
  right:0;
   border-radius: 3px;
 }
+
+.EventPost,.EventPost a {
+ color:#998a66;
+  margin-bottom: 15px;
+}
